--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Keita Urashima <ursm@ursm.jp>",
   "license": "MIT",
   "dependencies": {
-    "memjs": "^0.10.0"
+    "memjs": "~0.9.0"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
